--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RanepaMap</string>
+    <string name="list_item_image_description">Фото корпуса</string>
 </resources>
