--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RanepaMap</string>
     <string name="list_item_image_description">Фото корпуса</string>
+    <string name="toast_floor_down_attention">Ниже этажей нет</string>
+    <string name="toast_floor_up_attention">Выше этажей нет</string>
 </resources>
