--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="list_item_image_description">Фото корпуса</string>
     <string name="toast_floor_down_attention">Ниже этажей нет</string>
     <string name="toast_floor_up_attention">Выше этажей нет</string>
+    <string name="main_title">Главная</string>
 </resources>
