--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="toast_floor_down_attention">Ниже этажей нет</string>
     <string name="toast_floor_up_attention">Выше этажей нет</string>
     <string name="main_title">Главная</string>
+    <string name="activity_main_night_button">night_button</string>
 </resources>
