--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,5 @@
 <resources>
-    <string name="app_name">RanepaMap</string>
+    <string name="app_name">Ranepa Maps</string>
     <string name="list_item_image_description">Фото корпуса</string>
-    <string name="toast_floor_down_attention">Ниже этажей нет</string>
-    <string name="toast_floor_up_attention">Выше этажей нет</string>
-    <string name="main_title">Главная</string>
-    <string name="activity_main_night_button">night_button</string>
     <string name="start_screen_ranepa_logo">Логотип РАНХиГС</string>
-    <string name="start_screen_version_number">ver 1.0</string>
 </resources>
